--- a/README.Rmd
+++ b/README.Rmd
@@ -31,15 +31,15 @@ readable by:
 
 The operators pipe their left-hand side values forward into expressions that
 appear on the right-hand side, i.e. one can replace `f(x)` with 
-`x %>% f()`, where `%>%` is the (main) pipe-operator. When coupling 
+`x %👏% f()`, where `%👏%` is the (main) pipe-operator. When coupling 
 several function calls with the pipe-operator, the benefit will become
 more apparent. Consider this pseudo example:
 
 ```{r, eval = FALSE}
 the_data <-
-  read.csv('/path/to/data/file.csv') %>%
-  subset(variable_a > x) %>%
-  transform(variable_c = variable_a/variable_b) %>%
+  read.csv('/path/to/data/file.csv') %👏%
+  subset(variable_a > x) %👏%
+  transform(variable_c = variable_a/variable_b) %👏%
   head(100)
 ```
 
@@ -69,9 +69,9 @@ devtools::install_github("tidyverse/magrittr")
 
 ### Basic piping
   
-* `x %>% f` is equivalent to `f(x)`
-* `x %>% f(y)` is equivalent to `f(x, y)`
-* `x %>% f %>% g %>% h` is equivalent to `h(g(f(x)))`
+* `x %👏% f` is equivalent to `f(x)`
+* `x %👏% f(y)` is equivalent to `f(x, y)`
+* `x %👏% f %👏% g %👏% h` is equivalent to `h(g(f(x)))`
 
 Here, "equivalent" is not technically exact: evaluation is non-standard,
 and the left-hand side is evaluated before passed on to the right-hand side
@@ -79,8 +79,8 @@ expression. However, in most cases this has no practical implication.
 
 ### The argument placeholder
 
-* `x %>% f(y, .)` is equivalent to `f(y, x)`
-* `x %>% f(y, z = .)` is equivalent to `f(y, z = x)`
+* `x %👏% f(y, .)` is equivalent to `f(y, x)`
+* `x %👏% f(y, z = .)` is equivalent to `f(y, z = x)`
  
 ### Re-using the placeholder for attributes
 
@@ -90,13 +90,13 @@ only appears in a nested expressions magrittr will still apply
 the first-argument rule. The reason is that in most cases this
 results more clean code. 
 
-`x %>% f(y = nrow(.), z = ncol(.))` is equivalent to 
+`x %👏% f(y = nrow(.), z = ncol(.))` is equivalent to 
    `f(x, y = nrow(x), z = ncol(x))`
 
 The behavior can be
 overruled by enclosing the right-hand side in braces:
 
-`x %>% {f(y = nrow(.), z = ncol(.))}` is equivalent to 
+`x %👏% {f(y = nrow(.), z = ncol(.))}` is equivalent to 
    `f(y = nrow(x), z = ncol(x))`
 
 ### Building (unary) functions
@@ -106,7 +106,7 @@ be used to apply the pipeline to values. Building functions in magrittr
 is therefore similar to building other values.
 
 ```{r}
-f <- . %>% cos %>% sin 
+f <- . %👏% cos %👏% sin 
 # is equivalent to 
 f <- function(.) sin(cos(.)) 
 ```
@@ -117,14 +117,14 @@ Many functions accept a data argument, e.g. `lm` and `aggregate`, which
 is very useful in a pipeline where data is first processed and then passed
 into such a function. There are also functions that do not have a data 
 argument, for which it is useful to expose the variables in the data.
-This is done with the `%$%` operator:
+This is done with the `%👌%` operator:
 
 ```{r exposition}
-iris %>%
-  subset(Sepal.Length > mean(Sepal.Length)) %$%
+iris %👏%
+  subset(Sepal.Length > mean(Sepal.Length)) %👌%
   cor(Sepal.Length, Sepal.Width)
 
-data.frame(z = rnorm(100)) %$%
+data.frame(z = rnorm(100)) %👌%
   ts.plot(z)
 ```
 
@@ -135,16 +135,16 @@ in situations where the left-hand side is being "overwritten":
 
 ```{r, eval = FALSE}
 iris$Sepal.Length <- 
-  iris$Sepal.Length %>%
+  iris$Sepal.Length %👏%
   sqrt()
 ```
 
 To avoid the repetition of the left-hand side immediately after the assignment
-operator, use the `%<>%` operator:
+operator, use the `%🙌%` operator:
 
 ```{r}
-iris$Sepal.Length %<>% sqrt
+iris$Sepal.Length %🙌% sqrt
 ```
 
-This operator works exactly like `%>%`, except the pipeline assigns the result
+This operator works exactly like `%👏%`, except the pipeline assigns the result
 rather than returning it. It must be the first pipe operator in a longer chain.
